Add global configuration settings and bootstrap demo scenarios to APEX Rules Engine user guide